--- a/hds/templates/home.html
+++ b/hds/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} HDS: Home {% endblock %}
+{% block title %} Error reports {% endblock %}
 
 {% block content %}
   <div class="container">
