--- a/hds/templates/errorreport/list.html
+++ b/hds/templates/errorreport/list.html
@@ -1,6 +1,111 @@
 {% extends "base.html" %}
 {% block title %} HDS: Error report list view {% endblock %}
 {% block content %}
-<h1>HELLO</h1>
-Congrations, u done it with list
+<html>
+    <head>
+        <style>
+        table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        }
+        
+        td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+        }
+        
+        tr:nth-child(even) {
+        background-color: #dddddd;
+        }
+        </style>
+    </head>
+    
+<body>
+    <div>
+        <h1>HDS Prototype: Error Reports</h1>
+    </div>
+    <hr />
+    <div class="container" style="float:left">
+        <form method="GET" action=".">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="harvId">Harv IDs</label>
+                        <input type="text" class="form-control" id="harv-ids" aria-describedby="harvIdHelp" name="harv_ids" placeholder="1,2,3,...">
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="ranch">Ranches</label>
+                        <input type="text" class="form-control" id="ranch" aria-describedby="ranchHelp" name="locations" placeholder="ranch 1,ranch 2,...">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="start">Start time</label>
+                        <input type="text" class="form-control" id="start-time" aria-describedby="startHelp" name="start_time" placeholder="yyyymmdd...">
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label for="end">End time</label>
+                        <input type="text" class="form-control" id="end-time" aria-describedby="endHelp" name="end_time" placeholder="yyyymmdd...">
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+        <div style="float:right">
+            <h3>Total reports: {{data.count}}</h3>
+        </div>
+    <div>
+        <table class="table">
+            <tr>
+                <th scope="col">Time</th>
+                <th scope="col">Harvester</th>
+                <th scope="col">Location</th>
+                <th scope="col">Code</th>
+                <th scope="col">Service In Error</th>
+                <th scope="col">Branch</th>
+                <th scope="col">Githash</th>
+            </tr>
+            {% for res in data.results %}
+            <tr>
+                <td>
+                    <a href="/api/v1/errorreports/{{res.report_number}}">
+                        {{res.time}}
+                    </a>
+                </td>
+                <td>{{res.harvester.harv_id}}</td>
+                <td>{{res.location.ranch}}</td>
+                <td>{{res.code}}</td>
+                <td>{{res.service}}</td>
+                <td>{{res.branch}}</td>
+                <td>{{res.githash}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    <nav aria-label="error page nav">
+        <ul class="pagination justify-content-center">
+            <li class="page-item{% if not data.previous %} disabled{%endif%}">
+                <a class="page-link" href="{{data.previous}}" tabindex="-1" aria-disabled="{% if not data.previous%}true{%else%}false{%endif%}">Previous</a>
+            </li>
+            <li class="page-item{% if not data.next %} disabled{%endif%}">
+                <a class="page-link" href="{{data.next}}" tabindex="-1" aria-disabled="{% if not data.next%}true{%else%}false{%endif%}">Next</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+</html>
 {% endblock content %}
