landing templates update

--- a/hds/templates/home.html
+++ b/hds/templates/home.html
@@ -4,6 +4,11 @@
 {% block content %}
   <div class="container">
     <h2>Welcome to HDS</h2>
-    <p>This is the home page</p>
+
+    <ul class="list-inline pt-3">
+      <li>
+        <a href="/api/v1/errorreports/" class="btn btn-primary">View Error Reports</a>
+      </li>
+  </ul>
   </div>  
 {% endblock content %}
