--- a/hds/templates/base.html
+++ b/hds/templates/base.html
@@ -8,8 +8,49 @@
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}">
 </head>
 <body>
-  
-    {% block content %}{% endblock content %}
+  {% if 'login' not in request.path %}
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">
+      <img src="{% static 'images/logo.png' %}" width="120" height="70" alt="HDS Error Report">
+    </a>
+    
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="navbar-collapse collapse justify-content-stretch" id="navbar1">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link" href="#">Link 1</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">Link 2</a>
+          </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+
+          <form class="form-inline">
+            {% if user.is_authenticated %}
+              <li class="nav-item font-weight-bold mr-5">
+                 {{ user.username }}
+              </li>            
+            
+              <button class="btn btn-warning button-large my-2 my-sm-0" type="submit">
+                <a style="color:inherit" href="/logout">Logout</a>
+              </button>
+            {% else %}            
+              <button class="btn btn-warning button-large my-2 my-sm-0" type="submit">
+                <a style="color:inherit" href="/login">Login</a>
+              </button>      
+            {% endif %}
+          </form>
+
+      </ul>
+    </div>
+
+  </nav>
+  {% endif %}
+  {% block content %}{% endblock content %}
  
 </body>
 </html>
