remove errorreport template

--- a/hds/templates/home.html
+++ b/hds/templates/home.html
@@ -7,7 +7,7 @@
 
     <ul class="list-inline pt-3">
       <li>
-        <a href="/api/v1/errorreports/" class="btn btn-primary">View Error Reports</a>
+        <a href="#" class="btn btn-primary">View Error Reports</a>
       </li>
   </ul>
   </div>  
