--- a/hds/templates/home.html
+++ b/hds/templates/home.html
@@ -6,9 +6,11 @@
     <h2>Welcome to HDS</h2>
 
     <ul class="list-inline pt-3">
+      {% for name, link in links.items %}
       <li>
-        <a href="#" class="btn btn-primary">View Error Reports</a>
+        <a href="{{link}}" class="btn btn-primary">{{name}}</a>
       </li>
+      {% endfor %}
   </ul>
   </div>  
 {% endblock content %}
