--- a/hds/templates/base.html
+++ b/hds/templates/base.html
@@ -21,7 +21,7 @@
     <div class="navbar-collapse collapse justify-content-stretch" id="navbar1">
       <ul class="navbar-nav">
           <li class="nav-item">
-              <a class="nav-link" href="#">Link 1</a>
+              <a class="nav-link" href="/admin">Admin</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="#">Link 2</a>
