clean detail view

--- a/hds/templates/errorreport/detail.html
+++ b/hds/templates/errorreport/detail.html
@@ -2,15 +2,9 @@
 {% block content %}
 <html>
 <body>
-<div>
-    <div style="float:left">
-        <h1>HDS Prototype: Error Report {{report_number}} Detail View</h1>
-    </div>
-    <div style="float:right">
-        <a href="../">Back to Error Reports list</a>
-    </div>
+<div style="float:left">
+    <h1>HDS Prototype: Error Report {{report_number}}</h1>
 </div>
-
 
 <div>
     <table class="table">
