Master and robot tabs

--- a/hds/templates/401.html
+++ b/hds/templates/401.html
@@ -7,7 +7,7 @@
 <body>
   <div class="h-100 d-flex align-items-center justify-content-center">
     <div class="content">
-      <img src="/static/images/logo.png" width="300">
+      <img src="/static/images/logo_full.png" width="300">
       <br/>
       <h4>Authorization Error</h4>
       <p>You are not authorized to access this page.</p>
