--- a/hds/templates/base.html
+++ b/hds/templates/base.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   {% if 'login' not in request.path %}
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light py-0">
     <a class="navbar-brand" href="/">
-      <img src="{% static 'images/logo.png' %}" width="180" height="70" alt="HDS Error Report">
+      <img src="{% static 'images/logo.png' %}" width="35" height="30" alt="HDS Error Report">
     </a>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-controls="navbar1" aria-expanded="false" aria-label="Toggle navigation">
