--- a/hds/templates/login.html
+++ b/hds/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="h-100 d-flex align-items-center justify-content-center">
     <div class="content">
-      <img src="/static/images/logo.png" width="300">
+      <img src="/static/images/logo_full.png" width="300">
       <form method="post">
         {% if message %}
           <div class="alert alert-danger">{{ message }}</div>
