--- a/frontend/src/pages/home/styles.css
+++ b/frontend/src/pages/home/styles.css
@@ -1,18 +1,7 @@
-.home {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.welcome-brand {
+  margin-top: 2.5rem;
 }
 
-.logo-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-}
-
-.logo-container img {
-  width: 30%;
-}
+/* .welcome-brand h2 {
+  font-size: 2rem;
+} */
