--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .admin-route {
   margin-left: 1rem;
   text-decoration: none;
@@ -11,6 +19,48 @@
 }
 
 
+
 .username {
   margin-right: 1rem;
+}
+
+.multi-select-container {
+  width: 90% !important;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #1266f1;
+}
+
+.btn-warning {
+  color: #fff;
+  background-color: #ffa900;
+}
+
+.btn {
+  text-transform: uppercase;
+  vertical-align: bottom;
+  border: 0;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 20%), 0 2px 10px 0 rgb(0 0 0 / 10%);
+  font-weight: 500;
+  padding: 0.625rem 1.5rem 0.5rem;
+  font-size: .75rem;
+  line-height: 1.5;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  border-radius: 0.25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+@media (max-width: 768px) {
+  .custom-multiselect-control {
+    width: 100% !important;
+  }
+
+  .multi-select-container {
+    width: 100% !important;
+  }
 }
