--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,6 +55,10 @@ body {
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+.cursor {
+  cursor: pointer;
+}
+
 @media (max-width: 768px) {
   .custom-multiselect-control {
     width: 100% !important;
