--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,20 +5,18 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .admin-route {
   margin-left: 1rem;
   text-decoration: none;
-  color: rgba(0,0,0,.5);;
+  color: rgba(0, 0, 0, 0.5);
 }
-
-
 
 .username {
   margin-right: 1rem;
@@ -45,14 +43,15 @@ body {
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 20%), 0 2px 10px 0 rgb(0 0 0 / 10%);
   font-weight: 500;
   padding: 0.625rem 1.5rem 0.5rem;
-  font-size: .75rem;
+  font-size: 0.75rem;
   line-height: 1.5;
   display: inline-block;
   text-align: center;
   text-decoration: none;
   user-select: none;
   border-radius: 0.25rem;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .cursor {
