--- a/frontend/src/pages/auth/login/styles.css
+++ b/frontend/src/pages/auth/login/styles.css
@@ -24,9 +24,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
-
 
 .custom-form-control {
   display: inline;
@@ -42,7 +41,7 @@
   -moz-appearance: none;
   appearance: none;
   border-radius: 0.375rem;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .custom-form-control:hover {
