--- a/frontend/src/pages/errorreports/errorpareto/styles.css
+++ b/frontend/src/pages/errorreports/errorpareto/styles.css
@@ -7,3 +7,29 @@
 .bg-gray {
   background: #f0f0f0;
 }
+
+.sidenav {
+  position: relative;
+}
+
+.sidepane {
+  position: relative;
+  width: 400px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.sidecontent {
+  width: 100%;
+  z-index: 1;
+}
+
+@media (min-width: 892px) {
+  .sidecontent {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
