--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,14 +38,27 @@ a {
   font-size: 18px;
 }
 
-.profile-modal {
+.profile-menu {
   position: absolute;
   top: 50px;
   left: -50px;
-  width: 120px;
-  border: 1px solid #f5f5f5;
-  background: #fff;
+  width: 130px;
+  border: 1px solid #f0f0f0;
+  background: #f0f2f5;
   padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+}
+
+.link-item {
+  text-decoration: none;
+  color: #65676b;
+}
+
+.flex-align-center {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .multi-select-container {
