--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -48,6 +48,13 @@ a {
   padding: 5px;
   border-radius: 5px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  z-index: 1;
+}
+
+.text-right {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .link-item {
