--- a/frontend/src/pages/profile/profiledetail/styles.css
+++ b/frontend/src/pages/profile/profiledetail/styles.css
@@ -1,4 +1,6 @@
-.hover-div:hover {
-  cursor: pointer;
+.notification {
   background: #f4f4f4;
+  text-decoration: none;
+  margin: 10px 0;
+  color: inherit;
 }
