delete notification button

--- a/frontend/src/pages/notification/notifylist/styles.css
+++ b/frontend/src/pages/notification/notifylist/styles.css
@@ -5,3 +5,12 @@
 .table-responsive .table tr:hover {
   background-color: #f4f4f4;
 }
+
+.notif-link {
+  text-decoration: none;
+  color: #212529;
+}
+
+.notif-link:hover {
+  text-decoration: underline;
+}
