harvester list view page & component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -104,6 +104,10 @@ a {
   cursor: pointer;
 }
 
+.tr-hover:hover {
+  background-color: #f4f4f4;
+}
+
 @media (max-width: 768px) {
   .custom-multiselect-control {
     width: 100% !important;
