--- a/frontend/src/pages/errorreports/errorlist/styles.css
+++ b/frontend/src/pages/errorreports/errorlist/styles.css
@@ -1,11 +1,3 @@
-.table-responsive .table .report-tbody tr {
-  cursor: pointer;
-}
-
-.table-responsive .table .report-tbody tr:hover {
-  background-color: #f4f4f4;
-}
-
-.table-responsive .table .report-tbody tr td {
+.report-tbody td {
   padding: 1rem;
 }
