jobtypes page & component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -57,6 +57,12 @@ a {
   position: relative;
 }
 
+.flex-right {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
 .size-2x {
   font-size: 18px;
 }
