use object id wherever possible

--- a/frontend/src/pages/errorreports/errorlist/styles.css
+++ b/frontend/src/pages/errorreports/errorlist/styles.css
@@ -5,3 +5,13 @@
 .table-link {
   color: inherit;
 }
+
+.tabular {
+  flex: 0.5;
+  border: 1px solid #ccc;
+  padding: 5px;
+}
+
+.bg-gray {
+  background: #f0f0f0;
+}
