--- a/frontend/src/pages/logparser/logfile/listview/styles.css
+++ b/frontend/src/pages/logparser/logfile/listview/styles.css
@@ -15,6 +15,7 @@
   align-items: center;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
+  padding: 0.5rem 0;
 }
 
 .nav-icon-prog {
@@ -27,14 +28,6 @@
 
 .nav-search {
   flex: 0.8;
-  display: flex;
-  align-items: center;
-}
-
-.nav-search input {
-  width: 90%;
-  margin-right: 5px;
-  outline: none;
 }
 
 .tab-content {
@@ -99,6 +92,48 @@
   justify-content: center;
   flex-direction: column;
   height: 400px;
+}
+
+.find-bar {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  border: 1px solid var(--bg-third);
+  box-shadow: 0px 10px 38px -3px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 0 0.5rem;
+}
+
+.find-bar-text {
+  flex: 0.7;
+  display: flex;
+  justify-content: space-between;
+  border-right: 1px solid var(--bg-third);
+}
+
+.find-bar-text input {
+  border: none;
+  outline: none;
+  width: 100%;
+}
+
+.find-bar-text span:last-of-type {
+  margin-right: 1rem;
+}
+
+.find-bar-icons {
+  flex: 0.3;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.find-bar-icons span {
+  margin-right: 0.5rem;
+}
+
+.bordered-btn {
+  border: 1px solid var(--blue-color);
 }
 
 @media (max-width: 376px) {
