--- a/frontend/src/pages/errorreports/errorpareto/styles.css
+++ b/frontend/src/pages/errorreports/errorpareto/styles.css
@@ -50,6 +50,10 @@
   background: var(--dark-bg-third);
 }
 
+.scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+
 @media (min-width: 892px) {
   .sidecontent {
     position: absolute;
