[refactor] build multiple pareto & refresh on parameters change

--- a/frontend/src/pages/errorreports/errorpareto/styles.css
+++ b/frontend/src/pages/errorreports/errorpareto/styles.css
@@ -46,6 +46,15 @@
   cursor: pointer;
 }
 
+.non-pareto {
+  height: 400px;
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 3rem;
+}
+
 .dt-delete-icon {
   background: var(--dark-bg-third);
 }
